<resources>
    <string name="app_name">CIPHERTEXT</string>
    <string name="info">Qo`shimcha ma`lumotlar</string>
    <string name="programmers">Dasturchilar haqida</string>
    <string name="apps">Boshqa ilovalar</string>
    <string name="button1">Shifrlash</string>
    <string name="button2">Deshifrlash</string>
    <string name="usullar">Usullar</string>
    <string name="kalitV">Kalit</string>
    <string name="matn">Matn</string>
    <string name="sezar">Sezar usuli</string>
    <string name="start">Convert</string>
    <string name="vijiner">Vijiner usuli</string>
    <string name="rsa">RSA usuli</string>
    <string name="polibiya">Polibiya usuli</string>
    <string name="affian">Affian usuli</string>
    <string name="gamilton">Gamilton usuli</string>
    <string name="elgaman">El Gaman usuli</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="tub">p va q tub son</string>
    <string name="p">p</string>
    <string name="q">q</string>
    <string name="toq">Toq son A</string>
    <string name="son">son B</string>
    <string name="usul1">1-usul</string>
    <string name="usul2">2-usul</string>
    <string name="usul3">3-usul</string>
    <string name="text">Bo`limni tanlang</string>
    <string name="not_found">Not Found! :(</string>
    <string name="exit">Chiqish</string>
    <string name="v_1_0">v.1.0</string>
    <string name="clear">Clear</string>
    <string name="g">g(r)</string>
    <string name="a">a</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>