<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PolibiyaFr">

    <TextView
        android:id="@+id/polibiya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/carter_one"
        android:gravity="center"
        android:text="@string/polibiya"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/keyP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/style"
        android:fontFamily="@font/carter_one"
        android:gravity="center"
        android:hint="@string/kalitV"
        android:inputType="text"
        android:maxLength="1"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/polibiya" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/style"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keyP">

        <RadioButton
            android:id="@+id/usul1"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:text="@string/usul1"
            android:textColor="@color/purple_500"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/usul2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:text="@string/usul2"
            android:textColor="@color/purple_500"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/usul3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:text="@string/usul3"
            android:textColor="@color/purple_500"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RadioGroup>

    <EditText
        android:id="@+id/textPolibiya"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/style"
        android:drawableStart="@drawable/ic_baseline_text_fields_24"
        android:drawablePadding="5dp"
        android:fontFamily="@font/carter_one"
        android:hint="@string/matn"
        android:inputType="text"
        android:maxLength="25"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/purple_500"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/convertPolibiya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:text="@string/start"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPolibiya" />

    <TextView
        android:id="@+id/resultPolibiya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carter_one"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convertPolibiya" />

</androidx.constraintlayout.widget.ConstraintLayout>