<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ElGamanFr">

    <TextView
        android:id="@+id/elgamal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/carter_one"
        android:gravity="center"
        android:text="@string/elgaman"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:background="@drawable/style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@+id/elgamal">


        <EditText
            android:id="@+id/tubG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:hint="@string/g"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_500"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tubP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:hint="@string/p"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_500"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/sonA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:hint="@string/a"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_500"
            android:textSize="24sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/textElGaman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:drawableStart="@drawable/ic_baseline_text_fields_24"
        android:drawablePadding="8dp"
        android:background="@drawable/style"
        android:padding="15dp"
        android:fontFamily="@font/carter_one"
        android:hint="@string/matn"
        android:maxLength="30"
        android:textColor="@color/black"
        android:textColorHint="@color/purple_500"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/convertElGaman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:text="@string/start"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textElGaman" />

    <TextView
        android:id="@+id/resultElGaman"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convertElGaman" />

</androidx.constraintlayout.widget.ConstraintLayout>